# ontorunner

./: .flake8  .gitignore  Makefile  README.md  biohub_converter.py  genindex.html  index.html  modules.html  objects.inv  ontorunner.converters.html  ontorunner.html  ontorunner.pipes.html  ontorunner.post.html  ontorunner.pre.html  py-modindex.html  pyproject.toml  requirements.txt  runner.py  search.html  searchindex.js  settings.ini  setup.html  setup.py  tox.ini
.github/workflows/: doc_pages.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  qc.yml
_sources/: modules.rst.txt  ontorunner.pre.rst.txt  ontorunner.rst.txt
_sources/static/: intro.md.txt
data/input/: README.md
data/nodes_and_edges/: README.md
data/output/: README.md  example_dependencies.html  example_entities.html
data/serialized/: README.md
data/terms/: README.md
docs/: conf.py  genindex.html  index.html  index.rst  modules.html  modules.rst  objects.inv  ontorunner.converters.html  ontorunner.converters.rst  ontorunner.html  ontorunner.pipes.rst  ontorunner.post.html  ontorunner.post.rst  py-modindex.html  runner.converters.html  runner.html  runner.post.html  search.html  searchindex.js  setup.html
docs/_sources/: index.rst.txt  runner.converters.rst.txt  runner.post.rst.txt  runner.rst.txt
docs/_sources/static/: intro.md.txt
docs/static/: intro.html  intro.md
notebook/: demo.ipynb  settings.ini
notebook/data/input/: test.tsv
notebook/data/serialized/: onto_termlist.tsv.pickle  patterns.pickle  terms.pickle
ontorunner/: OntoExtractor.py  OntoRuler.py  __init__.py  oger_module.py  settings.ini  spacy_module.py
ontorunner/converters/: biohub_converter.py
ontorunner/pipes/: OntoRuler.py  __init__.py
ontorunner/post/: __init__.py  add_sentence.py  util.py
ontorunner/pre/: __init__.py  util.py
post_install/: run.py
runner/: runner.py  settings.ini
runner/conf/: synonym_rules.yaml
runner/converters/: biohub_converter.py
runner/post/: add_sentence.py  util.py
sphinx/: conf.py  index.rst  modules.rst  ontorunner.post.rst  ontorunner.rst  runner.rst
sphinx/static/: intro.md
static/: intro.html
tests/: __init__.py  settings.ini  test_oger.py  test_oger_cli.py  test_post.py  test_spacy.py
tests/data/input/: test.tsv  test.txt
tests/data/nodes_and_edges/: envo_edges.tsv  (+2 more)
(+5 files in other folders)
